@@ -1,7 +1,9 @@
 package com.lambda.APICasaDeJairo.config;
 
+import java.util.Arrays;
 import java.util.List;
 
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.http.HttpMethod;
@@ -18,9 +20,10 @@ import org.springframework.security.web.authentication.UsernamePasswordAuthentic
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
-
 import com.lambda.APICasaDeJairo.security.JwtAuthFilter;
 import com.lambda.APICasaDeJairo.service.UserService;
+import org.springframework.web.servlet.config.annotation.CorsRegistry;
+import org.springframework.web.servlet.config.annotation.WebMvcConfigurer;
 
 @Configuration
 @EnableMethodSecurity
@@ -29,25 +32,50 @@ public class SecurityConfig {
     private final UserService userService;
     private final JwtAuthFilter jwtAuthFilter;
 
+    @Value("${cors.allowed-origins:http://localhost:4200,https://casadejairo.online,https://www.casadejairo.online}")
+    private String allowedOrigins;
+
     public SecurityConfig(JwtAuthFilter jwtAuthFilter, UserService userService) {
         this.jwtAuthFilter = jwtAuthFilter;
         this.userService = userService;
     }
 
+    // CORS para o Spring Security
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOriginPatterns(List.of(
-                "http://localhost:4200",
-                "https://casadejairo.online",
-                "https://www.casadejairo.online"
-        ));
-        configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
+
+        // Usar variável de ambiente para origins
+        List<String> origins = Arrays.asList(allowedOrigins.split(","));
+        configuration.setAllowedOriginPatterns(origins);
+
+        configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
         configuration.setAllowCredentials(true);
         configuration.setAllowedHeaders(List.of("*"));
+        configuration.setExposedHeaders(List.of("Authorization", "Content-Type"));
+        configuration.setMaxAge(3600L); // Cache preflight por 1 hora
+
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
         return source;
+    }
+
+    // CORS global para o Spring MVC
+    @Bean
+    public WebMvcConfigurer corsConfigurer() {
+        return new WebMvcConfigurer() {
+            @Override
+            public void addCorsMappings(CorsRegistry registry) {
+                List<String> origins = Arrays.asList(allowedOrigins.split(","));
+                registry.addMapping("/**")
+                        .allowedOriginPatterns(origins.toArray(new String[0]))
+                        .allowedMethods("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH")
+                        .allowCredentials(true)
+                        .allowedHeaders("*")
+                        .exposedHeaders("Authorization", "Content-Type")
+                        .maxAge(3600);
+            }
+        };
     }
 
     @Bean
@@ -56,47 +84,67 @@ public class SecurityConfig {
                 .csrf(csrf -> csrf.disable())
                 .cors(cors -> cors.configurationSource(corsConfigurationSource()))
                 .authorizeHttpRequests(auth -> auth
-                        // Health checks e endpoints públicos
-                        .requestMatchers(
-                                "/",
-                                "/health",
-                                "/ping",
-                                "/status",
-                                "/actuator/**",
-                                "/v3/api-docs/**",
-                                "/swagger-ui/index.html/**",
-                                "/swagger-ui/**",
-                                "/h2-console/**",
-                                "/api/auth/**")
-                        .permitAll()
+                        // Permitir preflight CORS
+                        .requestMatchers(HttpMethod.OPTIONS, "/**").permitAll()
 
-                        // GET público de eventos e transparência e voluntários
+                        // Health checks e endpoints públicos
+                        .requestMatchers("/", "/health", "/ping", "/status", "/actuator/**").permitAll()
+
+                        // Swagger/OpenAPI
+                        .requestMatchers(
+                                "/v3/api-docs/**",
+                                "/v3/api-docs.yaml",
+                                "/swagger-ui/**",
+                                "/swagger-ui.html",
+                                "/swagger-resources/**",
+                                "/webjars/**").permitAll()
+
+                        // Endpoints de autenticação
+                        .requestMatchers("/api/auth/**").permitAll()
+
+                        // H2 Console (desenvolvimento)
+                        .requestMatchers("/h2-console/**").permitAll()
+
+                        // GET público
                         .requestMatchers(HttpMethod.GET, "/api/eventos/**").permitAll()
                         .requestMatchers(HttpMethod.GET, "/api/transparencia/**").permitAll()
                         .requestMatchers(HttpMethod.GET, "/api/voluntarios/**").permitAll()
                         .requestMatchers(HttpMethod.GET, "/api/empresa-parceira/**").permitAll()
 
-                        // POST público de voluntários e empresa parceira
+                        // POST público
                         .requestMatchers(HttpMethod.POST, "/api/voluntarios/**").permitAll()
                         .requestMatchers(HttpMethod.POST, "/api/empresa-parceira/**").permitAll()
 
-                        // POST, PUT, DELETE eventos → admin
+                        // Rotas ADMIN
                         .requestMatchers(HttpMethod.POST, "/api/eventos/**").hasRole("ADMIN")
                         .requestMatchers(HttpMethod.PUT, "/api/eventos/**").hasRole("ADMIN")
                         .requestMatchers(HttpMethod.DELETE, "/api/eventos/**").hasRole("ADMIN")
-
-                        // POST, PUT, DELETE transparência → admin
                         .requestMatchers(HttpMethod.POST, "/api/transparencia/**").hasRole("ADMIN")
                         .requestMatchers(HttpMethod.PUT, "/api/transparencia/**").hasRole("ADMIN")
                         .requestMatchers(HttpMethod.DELETE, "/api/transparencia/**").hasRole("ADMIN")
-
-                        // rotas /api/admin/** → admin
                         .requestMatchers("/api/admin/**").hasRole("ADMIN")
 
-                        // todas as outras rotas precisam de autenticação
+                        // Todas as outras rotas autenticadas
                         .anyRequest().authenticated())
                 .sessionManagement(sess -> sess.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
                 .addFilterBefore(jwtAuthFilter, UsernamePasswordAuthenticationFilter.class)
+                .headers(headers -> headers
+                        .frameOptions(frameOptions -> frameOptions.sameOrigin())
+                        .contentTypeOptions(contentTypeOptions -> contentTypeOptions.disable())
+                        // Adicionar headers de segurança específicos
+                        .httpStrictTransportSecurity(hsts -> hsts
+                                .maxAgeInSeconds(31536000)
+                                .includeSubdomains(true))
+                        .and()
+                        .addHeaderWriter((request, response) -> {
+                            // Headers CORS adicionais se necessário
+                            if ("OPTIONS".equals(request.getMethod())) {
+                                response.addHeader("Access-Control-Allow-Origin", "*");
+                                response.addHeader("Access-Control-Allow-Methods", "GET, POST, PUT, DELETE, OPTIONS, PATCH");
+                                response.addHeader("Access-Control-Allow-Headers", "*");
+                                response.addHeader("Access-Control-Max-Age", "3600");
+                            }
+                        }))
                 .build();
     }
 
